# lab_riddler_django

./: .gitignore  db.sqlite3  pyproject.toml
example_site/: settings.py
riddle_app/: models.py  tests.py  urls.py  views.py
riddle_app/migrations/: 0004_alter_riddle_difficulty.py  0005_remove_riddle_likes.py
riddle_app/static/: style.css
riddle_app/templates/riddle_app/: base.html  guess_riddle.html  index.html  navigation.html  new_riddle_form.html  riddle_detail.html  riddle_guess.html  riddle_list.html
