[tool.poetry]
name = "lab_riddler_django"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "riddle_site"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
